fixed up message box so it is aligned with other email and name inputs

--- a/main/src/components/ui/Card.module.css
+++ b/main/src/components/ui/Card.module.css
@@ -69,7 +69,7 @@
 
 .messageinput {
   position: relative;
-  right: 30px;
+  right: 35px;
   top: 120px;
   width: 440px;
   height: 200px;
